# Internal data structure for efficiently detecting mutex dependency cycles
source_set("graphcycles_internal") {
  public = [
    "internal/graphcycles.h",
  ]
  sources = [
    "internal/graphcycles.cc",
  ]
  deps = [
    "../base",
    "../base:base_internal",
    "../base:core_headers",
    "../base:malloc_internal",
  ]
}

source_set("synchronization") {
  public = [
    "barrier.h",
    "blocking_counter.h",
    "internal/create_thread_identity.h",
    "internal/kernel_timeout.h",
    "internal/mutex_nonprod.inc",
    "internal/per_thread_sem.h",
    "internal/waiter.h",
    "mutex.h",
    "notification.h",
  ]
  sources = [
    "barrier.cc",
    "blocking_counter.cc",
    "internal/create_thread_identity.cc",
    "internal/per_thread_sem.cc",
    "internal/waiter.cc",
    "mutex.cc",
    "notification.cc",
  ]
  deps = [
    ":graphcycles_internal",
    "../base",
    "../base:base_internal",
    "../base:config",
    "../base:core_headers",
    "../base:dynamic_annotations",
    "../base:malloc_internal",
    "../debugging:stacktrace",
    "../debugging:symbolize",
    "../time",
  ]
}
